<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>GestorTareas</artifactId>
    <groupId>main.svfa.com</groupId>
    <version>0.0.1</version>
  </parent>

  <artifactId>app</artifactId>
  <name>app</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>main.svfa.com</groupId>
      <artifactId>BasesDatos</artifactId>
      <version>0.0.1</version>
    </dependency>
    <dependency>
      <groupId>main.svfa.com</groupId>
      <artifactId>gui</artifactId>
      <version>0.0.1</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
<dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-controls</artifactId>
    <version>21.0.2</version>
</dependency>
<dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-fxml</artifactId>
    <version>21.0.2</version>
</dependency>
<dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-graphics</artifactId>
    <version>21.0.2</version>
</dependency>

  </dependencies>

<build>
    <plugins>
        <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>org.app.App</mainClass>
          <launcher>launcherName</launcher>
          <jvmArgs>
            --module-path "/Users/stevefletesalfaro/Documents/GitHub/GestorTarea/GestorTareas/javafx-sdk-21.0.3/lib" --add-modules javafx.controls,javafx.fxml
          </jvmArgs>
        </configuration>
      </plugin>
<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <version>3.2.4</version>
            <executions>
                <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>shade</goal>
                    </goals>
                    <configuration>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                <mainClass>org.app.App</mainClass>
                            </transformer>
                        </transformers>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <includes>
                                    <include>**/*.fxml</include>
                                    <include>**/*.css</include>
                                    <include>**/*.properties</include> <!-- Asegúrate de incluir los archivos .properties -->
                                </includes>
                            </filter>
                        </filters>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>

</project>
